:art: Initial Style

--- a/style.css
+++ b/style.css
@@ -6,4 +6,208 @@
     --green: #2BE5A2;
     --pink: #F4139A;
     --black: #242424;
+    --white: #ffffff;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+    outline: 0px;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    background-color: var(--black);
+}
+
+body,
+a,
+input,
+label,
+button {
+    font-family: 'Teko';
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container .top-bar {
+    padding-top: 10px;
+}
+
+.container .content {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+
+.container .content .display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    border: 10px solid var(--red);
+    border-radius: 20px 20px 0 0;
+}
+
+.container .content .display-counters {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+}
+
+.container .content .display input {
+    background-color: transparent;
+    border: 8px solid var(--red);
+    margin: 10px 0;
+    border-radius: 20px;
+    text-align: center;
+    color: var(--white);
+}
+
+.container .content .display .focus-display {
+    width: 50%;
+    font-size: 56px;
+    font-weight: bold;
+}
+
+.container .content .display .relax-display {
+    width: 35%;
+    font-size: 38px;
+    font-weight: bold;
+}
+
+.container .content .display-controls {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10px;
+    width: 100%;
+    height: 100%;
+    background-color: var(--red);
+}
+
+.container .content .display-controls button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid var(--white);
+    border-radius: 10px;
+    background-color: var(--white);
+    margin: 0 10px;
+    transition: .2s ease;
+    cursor: pointer;
+}
+
+.container .content .display-controls button:hover {
+    background-color: var(--black);
+}
+
+.container .content .display-controls button img {
+    width: 38px;
+    margin: 0;
+    padding: 0;
+}
+
+.container .content .display-controls .play {
+    padding: 5px 30px;
+}
+
+.container .content .display-controls .pause {
+    padding: 0px 15px;
+}
+
+.container .content .display-controls .stop {
+    padding: 0px 15px;
+}
+
+.container .content .controls {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 20px 0px;
+}
+
+.container .content .controls button {
+    background-color: transparent;
+    border: none;
+    font-size: 32px;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 10px;
+}
+
+.container .content .controls input {
+    background-color: transparent;
+    border: none;
+    text-align: center;
+    font-weight: bold;
+    padding: 0;
+    margin: 0;
+    width: 50%;
+    font-size: 48px;
+}
+
+.container .content .controls .focus-controls {
+    background-color: var(--white);
+    border-radius: 10px 10px 00px 0px;
+    margin-right: 20px;
+
+}
+
+
+.container .content .controls .focus-controls .focus-buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0 0 0;
+}
+
+.container .content .controls .focus-controls .focus-buttons button,
+.container .content .controls .focus-controls .focus-buttons input {
+    color: var(--blue);
+}
+
+.container .content .controls .focus-controls .focus-name {
+    text-align: center;
+    font-size: 24px;
+    color: var(--white);
+    background-color: var(--blue);
+}
+
+.container .content .controls .relax-controls {
+    background-color: var(--white);
+    border-radius: 10px 10px 00px 0px;
+    margin-left: 20px;
+}
+
+.container .content .controls .relax-controls .relax-buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0 0 0;
+}
+
+.container .content .controls .relax-controls .relax-buttons button,
+.container .content .controls .relax-controls .relax-buttons input {
+    color: var(--green);
+}
+
+.container .content .controls .relax-controls .relax-name {
+    text-align: center;
+    font-size: 24px;
+    color: var(--white);
+    background-color: var(--green);
 }
