--- a/style.css
+++ b/style.css
@@ -40,7 +40,21 @@ button {
 }
 
 .container .top-bar {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
     padding-top: 10px;
+}
+
+.container .top-bar>img {
+    display: block;
+    margin-left: auto;
+}
+
+.container .top-bar a {
+    display: block;
+    margin-left: auto;
+    margin-right: 20px;
 }
 
 .container .content {
